implementations/envoy-connect-udp/docker/envoy.yaml
admin:
  address:
    socket_address: {address: 127.0.0.1, port_value: 9901}
static_resources:
  listeners:
  - name: masque_connect_udp
    address:
      socket_address: {protocol: UDP, address: 0.0.0.0, port_value: 4443}
    udp_listener_config:
      quic_options: {}
      downstream_socket_config: {prefer_gro: true}
    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.quic
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
          downstream_tls_context:
            common_tls_context:
              tls_certificates:
              - certificate_chain: {filename: /certs/server.pem}
                private_key: {filename: /certs/server-key.pem}
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP3
          stat_prefix: masque_connect_udp
          route_config:
            name: masque_route
            virtual_hosts:
            - name: masque_proxy
              domains: ["*"]
              routes:
              - match: {connect_matcher: {}}
                route:
                  cluster: protocol_lab_udp_echo
                  upgrade_configs:
                  - upgrade_type: CONNECT-UDP
                    connect_config: {}
                response_headers_to_add:
                - header: {key: X-ProtocolLab-Proxy-Role, value: envoy-connect-udp}
                - header: {key: X-ProtocolLab-Target-Role, value: masque-echo.plab.test:4433}
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          http3_protocol_options: {allow_extended_connect: true}
  clusters:
  - name: protocol_lab_udp_echo
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: protocol_lab_udp_echo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: 127.0.0.1, port_value: 4433}
